Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7028

Pinned debugger tooltips disappear

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.5.0-beta
    • Debugger
    • None
    • Windows
    • e0070e57e61499fea47fa74e217e942c18417155

    Description

      1. Enable "Use tooltips in main editor while debugging".
      2. Create a new Qt GUI project.
      3. Build it using MinGW.
      4. Set a breakpoint in main.cpp.
      5. Run it in debugger.
      6. When execution stopped at the breakpoint, hover "argv".
        A tooltip will show up.
      7. Double-click one of the displayed values.
        The value becomes editable.
      8. Click somewhere else in the tooltip.
        The tooltip disappears.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hjk hjk
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes