debugger: make tooltips non-editable

Task-number: QTCREATORBUG-7028
Change-Id: I8b70435df8b958961204f8498f63b0752a6ad0bf
Reviewed-by: hjk <qthjk@ovi.com>